SelectorQuery failing RightMostWithIdMatch are compiling their selectors for each execution https://bugs.webkit.org/show_bug.cgi?id=129601

Reviewed by Andreas Kling.

This caused a regression after r164924 for documents in quirks mode. Since those always fail
selectorForIdLookup(), they ended up compiling the selector every time they were called.

* dom/SelectorQuery.cpp:
(WebCore::SelectorDataList::execute):


Canonical link: https://commits.webkit.org/147671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165001 268f45cc-cd09-0410-ab3c-d52691b4dbfc